# Moments

./: .gitignore  AnalysisConfig.py  Covariance.C  MomentCalculator.py  Moments.code-workspace  OpenMp.py  OpenMpUtilities.py  PlottingUtilities.py  README.md  RootPlottingUtilities.py  RootUtilities.py  Utilities.py  basisFunctions.C  calcMomentsPhotoProdPiPiUnpol.py  makeKinematicPlots.py  makeMomentsInputTree.py  mergeSigAndBkgTrees.py  momentsPhotoProdEtaPi0.py  momentsPhotoProdPiPiUnpol.py  overlayMoments.py  overlayNizarsResults.py  photoProdCalcMoments.py  photoProdCombineMoments.py  photoProdMomentsPwa.py  photoProdPiPiCalcMoments.py  photoProdPiPiMomentsPwa.py  photoProdPiPiPlotMoments.py  photoProdPiPiWeightData.py  photoProdPlotIntensityFcn.py  photoProdPlotMoments.py  photoProdWeightData.py  plotMomentsPhotoProdPiPiUnpol.py  plotWeightedMc.py  pyproject.toml  requirements.txt  rootlogon.C  setupCueEnv.csh  setupCueEnv.sh  testBasisFunc.py  testComplexUncert.py  (+16 more)
Alex/: FSRootFlatten.py  FSRootMacros.C  makeMomentsInputTree.py  phaseSpace.list  plotAmpToolsTree.py  runGenAmp.sh  signal.list
cpp/: Covariance.C  basisFunctions.C
dataMcPhotoProdEtaPi0/: makeMomentsInputTree.py
dataPhotoProdEtaPi0/: makeMomentsInputTree.py
dataPhotoProdKmKS/: makeMomentsInputTree.py
dataPhotoProdPiPi/: makeKinematicPlots.py  makeKinematicPlotsAllBeamPolOrient.py  makeMomentsInputTree.py  overlayContours.py  overlayPhiHFPosNeg.py  plotWeightedMc.py  testEfficiencyHoles.py  testEventWeight.py  testFSRootAngles.py
dataPhotoProdPiPiPol/: downsampleData.py  overlayWeightedMc.py  (+6 more)
(+282 files in other folders)
